# ridewithgps-to-cuesheet

./: .gitignore  Makefile  README.md  convertRWGPS.py  output.txt  pyproject.toml  requirements.txt  sample.env  script.py
.mypy_stubs/xlsxwriter/: __init__.pyi  app.pyi  chart.pyi  chart_area.pyi  chart_bar.pyi  chart_column.pyi  chart_doughnut.pyi  chart_line.pyi  chart_pie.pyi  chart_radar.pyi  chart_scatter.pyi  chart_stock.pyi  chartsheet.pyi  comments.pyi  contenttypes.pyi  core.pyi  custom.pyi  drawing.pyi  exceptions.pyi  feature_property_bag.pyi  format.pyi  image.pyi  metadata.pyi  packager.pyi  relationships.pyi  rich_value.pyi  rich_value_rel.pyi  rich_value_structure.pyi  rich_value_types.pyi  shape.pyi  sharedstrings.pyi  styles.pyi  table.pyi  theme.pyi  url.pyi  utility.pyi  vml.pyi  workbook.pyi  worksheet.pyi  xmlwriter.pyi
randos/: .gitignore
route_converter/: ridewithgps.py
src/ridewithgps_to_cuesheet/: __init__.py  cli.py  conversion.py  logger.py  ridewithgps.py  secrets.py  utils.py
tests/: test_cli.py  test_conversion.py  test_integration.py  test_utils.py
tests/data/: test_route.csv
