[project]
authors = [{ name = "Etienne H", email = "et@hossack.me" }]
license = { text = "GPLv2" }
requires-python = "<4.0,>=3.9"
dependencies = ["XlsxWriter<4.0.0,>=3.0.1", "requests<3.0.0,>=2.28.2"]
name = "ridewithgps-to-cuesheet"
version = "0.4.0"
description = "Convert RideWithGPS maps to BC Randonneurs cuesheets"

[dependency-groups]
dev = ["poethepoet>=0.34.0", "ruff<1.0.0,>=0.0.263"]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "route_converter"
module-root = ""

[tool.ruff]
select = ["C9", "E", "F", "I", "W"]
exclude = [".git", "__pycache__", ".mypy_stubs", ".venv"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D106", "D203"]
line-length = 120

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.mccabe]
max-complexity = 10

[tool.poe.tasks]
convert-route = "script.py --url $URL --verbose"
