[project]
authors = [{ name = "Etienne H", email = "et@hossack.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.9,<4.0"
dependencies = ["requests>=2.32.3", "xlsxwriter>=3.2.3"]
name = "ridewithgps-to-cuesheet"
version = "0.4.0"
description = "Convert RideWithGPS maps to BC Randonneurs cuesheets"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "poethepoet>=0.34.0",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250515",
]

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "route_converter"
module-root = ""

[tool.ruff]
exclude = [".git", "__pycache__", ".mypy_stubs", ".venv"]
line-length = 120

[tool.ruff.lint]
select = ["C9", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
mypy_path = ".mypy_stubs"
show_error_codes = true
show_column_numbers = true

[tool.poe.tasks]
convert-route = "script.py --url $URL --verbose"
validate = ["lint", "type-check", "format-check"]
lint = "ruff check ."
type-check = "mypy ."
format-check = "ruff format --check ."
format = "ruff format ."
generate-mypy-stubs = "stubgen --output .mypy_stubs"
